@@ -1,4 +1,4 @@
 @echo off
 setlocal
 cd /d "%~dp0\.."
-java -cp "out;lib\*" com.group58.recruit.Main
+java --module-path "lib" --add-modules javafx.controls,javafx.fxml -cp "out;lib\*" com.group58.recruit.FxMain
